Update all documentation to match current project state
- Fixed package names (com.prbot -> com.bot.bot), JAR names, build/run commands
- Removed stale env vars (GITHUB_CLIENT_SECRET, GITHUB_REDIRECT_URI)
- Added new features: inline comments, per-repo .prreview.yaml, auto-approve, actuator
- Updated class references to match actual source tree
- Fixed Docker/K8s examples with current cert paths and env vars
- Fixed component flow diagrams (PullRequestEventHandler -> ReviewOrchestrator, etc.)
- Removed references to nonexistent classes, files, and endpoints
- Added .prreview.yaml config documentation with all supported fields